feature(paa): add pokemon details REST API

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.show-sql=true
 pokeapi.url=https://pokeapi.co/api/v2/pokemon?limit=%d&offset=%d
+pokeapi.details.url=https://pokeapi.co/api/v2/pokemon/%s
