--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:pokemonapi
 spring.datasource.driverClassName=org.h2.Driver
