feature(paa): add pokemon list db health check

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,6 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.show-sql=true
+management.endpoint.health.show-details=always
 pokeapi.url=https://pokeapi.co/api/v2/pokemon?limit=%d&offset=%d
 pokeapi.details.url=https://pokeapi.co/api/v2/pokemon/%s
