--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,8 @@ spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.show-sql=true
 management.endpoint.health.show-details=always
+management.health.db.enabled=false
 pokeapi.url=https://pokeapi.co/api/v2/pokemon?limit=%d&offset=%d
 pokeapi.details.url=https://pokeapi.co/api/v2/pokemon/%s
+spring.security.user.name=test
+spring.security.user.password=test
